; ModuleID = '/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigRequirepassOption.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_config.c_rewriteConfigRequirepassOption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rewriteConfigState = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c" \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rewriteConfigRequirepassOption(%struct.rewriteConfigState* %0, i8* %1) #0 {
  %3 = alloca %struct.rewriteConfigState*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 1, i32* %5, align 4
  %8 = call i32* (...) @ACLDefaultUserFirstPassword()
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState* %12, i8* %13)
  br label %28

15:                                               ; preds = %2
  %16 = load i8*, i8** %4, align 8
  %17 = call i32* @sdsnew(i8* %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32* @sdscatlen(i32* %18, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i32* @sdscatsds(i32* %20, i32* %21)
  store i32* %22, i32** %6, align 8
  %23 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %3, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState* %23, i8* %24, i32* %25, i32 %26)
  br label %28

28:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32* @ACLDefaultUserFirstPassword(...) #1

declare dso_local i32 @rewriteConfigMarkAsProcessed(%struct.rewriteConfigState*, i8*) #1

declare dso_local i32* @sdsnew(i8*) #1

declare dso_local i32* @sdscatlen(i32*, i8*, i32) #1

declare dso_local i32* @sdscatsds(i32*, i32*) #1

declare dso_local i32 @rewriteConfigRewriteLine(%struct.rewriteConfigState*, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
